--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,6 @@ body {
   color: var(--color-text-light);
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  height: 100vh;
   width: 100vw;
   line-height: 1.9;
 }
@@ -208,7 +207,7 @@ body {
   font-size: 1.4rem;
   font-weight: 400;
   padding: 1.5rem 0 3rem;
-  margin: 0 auto;
+  margin: 0 auto 5rem;
   width: 70vw;
   text-align: center;
   transition: all 1s ease;
@@ -278,7 +277,7 @@ body {
 
 .extras {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   list-style-type: none;
   text-align: center;
   margin-top: 1rem;
@@ -391,11 +390,6 @@ body {
   .result {
     grid-template-columns: repeat(1, 1fr);
   }
-
-  .extras {
-  grid-template-columns: repeat(1, 1fr);
-}
-
 }
 
 @media (max-width: 550px) {
@@ -404,7 +398,7 @@ body {
   .layout,
   .navigation,
   .result {
-    width: 80vw;
+    width: 90vw;
   }
 
   .form {
